# MySDLGame

./: .gitignore  CMakeLists.txt
Game/: CMakeLists.txt
Game/src/: Main.cpp  SDLImageWrap.cpp  SDLImageWrap.h  SDLWrap.cpp  SDLWrap.h  Surface.cpp  Surface.h  Window.cpp  Window.h  app.cpp
